--- a/text/1-uvod.tex
+++ b/text/1-uvod.tex
@@ -6,7 +6,7 @@ osob a~životního prostředí.  Hlavní systém zjišťující radiační situa
 na území České republiky se nazývá Radiační monitorovací síť
 (RMS). Vedle Sítě včasného zjištění (SVZ), teritoriální sítě TLD
 apod. jsou jednou z~jejích hlavních složek také mobilní skupiny (MS)
-provádející pozemní monitorování radiace. \cite{suroRMS}
+provádějící pozemní monitorování radiace. \cite{suroRMS}
 
 Cílem této bakalářské práce je implementace softwarového nástroje
 umožňujícího plánování optimálních tras pozemního monitorování
@@ -16,8 +16,8 @@ mraku. Jedním z~produktů je také mapa dávkových příkonů záření gama
 pro zasaženou oblast. Vytvářený softwarový nástroj určí přibližný
 odhad dávky záření, kterou obdrží mobilní skupina provádějící měření
 na dané trase v~postiženém území. V~případě překročení hraničních
-hodnot nástroj pomůže v~přeplánování trasy přes jiné komunikace
-příp. změny rychlosti jízdy vozidla tak, aby mobilní skupina nebyla
+hodnot nástroj pomůže přeplánovat trasu přes jiné komunikace
+příp. změnit rychlost jízdy vozidla tak, aby mobilní skupina nebyla
 vystavována nebezpečným dávkám.  Nástroj může být hypoteticky využit
 také například pro havarijní plánování při navrhování tras evakuace
 obyvatelstva. V~rámci práce je tvořena offline varianta nástroje
@@ -35,5 +35,5 @@ monitorování.
 Nástroj je vytvářen pro \zk{SÚRO}, jako platforma pro vývoj je použit
 open source geo\-grafický informační systém QGIS umožňující implementaci
 nové funkcionality jako tzv. zásuvný modul (plugin). Nástroj je
-vyvíjen v~programovacím jazyku Python s~využitím grafického frameworku
+vyvíjen v~programovacím jazyce Python s~využitím grafického frameworku
 PyQt a QGIS API (rozhraní pro programování aplikací).
