--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -129,8 +129,8 @@
   vytvářený softwarový nástroj určí přibližný odhad dávky záření,
   kterou obdrží mobilní skupina provádějící měření na dané trase
   v~postiženém území. V~případě překročení hraničních hodnot nástroj
-  pomůže v~přeplánování trasy přes jiné komunikace příp. změny
-  doporučené rychlosti jízdy vozidla tak, aby mobilní skupina nebyla
+  pomůže přeplánovat trasu přes jiné komunikace příp. změnit
+  doporučenou rychlost jízdy vozidla tak, aby mobilní skupina nebyla
   vystavována nebezpečným dávkám.}  {The~aim of this bachelor thesis
   is the~implementation of a~software tool enabling the~management of
   routes of the~ground radiation monitoring. During nuclear disasters,
@@ -209,8 +209,8 @@
           rodiny a~blízkých, díky kterým jsem v~posledních měsících
           nemusel trávit večery sám s~myšlenkami o~mém
           počínání. Největší díky bych chtěl věnovat mému vedoucímu
-          práce Ing. Martinu Landovi Ph.D. za to, že mě na rozdíl od
-          přátel k~práci velmi motivoval a příkladně jí vedl. Nakonec
+          práce Ing. Martinu Landovi, Ph.D. za to, že mě na rozdíl od
+          přátel k~práci velmi motivoval a příkladně ji vedl. Nakonec
           bych rád poděkoval Mgr. Janu Helebrantovi (SÚRO) za cenné
           připomínky a vždy bleskové odpovědi na mé dotazy.}  }
 
