Revert "Text update."
This reverts commit 120d772541210322e7dd11e249c1abd358ee00d3.

--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -8,7 +8,7 @@ přechod mezi teoretickou a~praktickou částí.
 \section{Ionizující záření}
 	
 Záření (radiace) je proces, při kterém energie prochází
-prostorem. Typickými pří\-klady záření, se kterými se setkáváme na denní
+prostorem. Typickými příklady záření, se kterými se setkáváme na denní
 bázi, je sluneční svit, rádiový, televizní nebo i wifi signál.
 
 Ionizující záření je záření s~takovým množstvím energie, že může
@@ -50,9 +50,9 @@ různé látky. \cite{atomInfo}
 	\item \textbf{Dávka, dávkový příkon}
 	
 		 Nejdůležitější z~těchto veličin je tzv. dávka, která
-má za jednotku gray [Gy] patřící mezi jednotky SI. Fyzikální
+má za jednotku gray [Gy] patřící mezi základní jednotky SI. Fyzikální
 rozměr jednotky gray je joule na kilogram [J/kg]. Častá veličina je
- tzv. dávkový příkon, tedy přírůstek dávky v~čase [Gy/s].
+dále tzv. dávkový příkon, tedy přírůstek dávky v~čase [Gy/s].
 		
 	\item \textbf{Ekvivalentní dávka, ekvivalentní dávkový příkon}
 
@@ -94,7 +94,7 @@ umělým. \cite{radiobiologie}
 pozadí. Přírodní zdroje jsou dále rozděleny na dvě kategorie, kosmické
 záření a přírodní radionuklidy.  Množství kosmického záření se odvíjí
 od nadmořské výšky a zeměpisné šířky kvůli působení zemského
-magne\-tického pole na dráhu nabitých částic. Například mezi 30$^{o}$ a
+magnetického pole na dráhu nabitých částic. Například mezi 30$^{o}$ a
 60$^{o}$ jižní resp. severní šířky je intenzita záření příbližně
 o~10\% vyšší než na rovníku a magnetických pólech.  Zdroje přírodních
 radionuklidů jsou především horniny. Intenzita záření se odvíjí od
@@ -122,16 +122,16 @@ bakalářské práce, proto nebude dále rozebírán.
 \subsection{Biologické účinky ionizujícího záření} Pro stanovení
 kritérií a principů radiační ochrany obyvatelstva a pracujících, kteří
 přicházejí se zdroji ionizujícího záření více do kontaktu, je potřeba
-vědět, jak ioni\-zující záření působí na lidský organismus. Z~těchto
+vědět, jak ionizující záření působí na lidský organismus. Z~těchto
 kritérií je dále odvozen systém limitování dávek (viz. kapitola
 \ref{sub:limity}). \cite{sujbBiologickeUcinky}
 
 Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje
 ionizaci atomů. Ta může dále vést k~chemickým reakcím, fyzikálním
 změnám a v~případě živých tkání k~biochemickým změnám. Tyto změny
-mohou vést k~poškození organismu nebo~i~k~jeho úmrtí. Účinek radiace
+mohou vést k~poškození organismu nebo i k~jeho úmrtí. Účinek radiace
 na organismus je rozdělen na 4 následující etapy: \cite{bioZarUllman}
-\newpage
+
 \begin{enumerate}
 	\item \textbf{Fyzikální stádium}
 	
@@ -156,7 +156,7 @@ molekulami a mění jejich složení a funkci. Například zlomy řetězců
 v~molekule DNA jsou řazeny mezi typické poruchy. Trvání tohoto stádia
 ovlivňuje transportní doba reaktivních složek z~místa svého vzniku do
 místa napadené biomolekuly v~rozmezí od tisícin sekundy do řádově
-jednotek sekund.
+jednotek sekundy.
 	
 	\item \textbf{Biologické stádium}
 	
@@ -180,14 +180,14 @@ Nemoc z~ozáření může být rozdělena na 2 kategorie: \cite{nemoc}
 	\item \textbf{Akutní nemoc z~ozáření}
 	
 		Akutní nemoc z~ozáření je způsobena jednorázovým
-ozářením. Prvotními pří\-znaky jsou nevolnost, zvracení a průjmy. Pokud
+ozářením. Prvotními příznaky je nevolnost, zvracení a průjmy. Pokud
 dávka ozáření překročí hodnotu přibližně 4 Sv, nastupuje tzv. střevní
 forma, kterou doprovází krvavé průjmy a mine\-rální rozvrat. Poté
 přichází období latence (prodlevy), jehož délka trvání závisí na
 množství absorbované dávky. Po uplynutí latentní fáze nastupuje
 tzv. dřeňová forma, kdy dojde k~zhroucení krvetvorby a imunitních
 mechanismů. Nemoc v~této fázi dále způsobuje sepsi, sterilitu,
-u~těhotných žen potrat atp. Pokud dojde k~absorpci dávek záření
+u~těhotných žen potrat atp. Pokud dojde k~absorbaci dávek záření
 vyšších než 10 Sv, dochází k~nevratnému poškození buněk centrálního
 nervového systému a později nastává smrt.
 		
@@ -217,7 +217,7 @@ radiačních havárií. \cite{suroRadOch} \cite{sujbRadSit}
 
 \subsection{Limity expozice ionizujícímu záření v~České republice}
 \label{sub:limity} Stupeň povoleného ozáření obyvatelstva se řídí
-omezeními, která jsou určována le\-gislativou ve vyhláškách úřadů
+omezeními, která jsou určována legislativou ve vyhláškách úřadů
 zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně
 pro Českou republiku je to vyhláška 307/2002 Sb. Na základě doporučení
 pracovníků SÚRO jsou hodnoty dávky resp. dávkového příkonu udávané
@@ -228,7 +228,7 @@ z~obrázku \ref{fig:davkyCR}. \cite{suroPriRadOch}
 \begin{figure}[H] \centering
     \includegraphics[scale=0.6]{./pictures/davkyCR.jpeg}
       	\caption[Příklady expozice a limity]{Příklady expozice a
-limity (zdroj: \cite{suroOcek})}
+limity (zdroj:\cite{suroOcek})}
     	\label{fig:davkyCR}
 \end{figure}
 
@@ -261,7 +261,7 @@ haváriích jsou k~dispozici modelové prognózy vznikající radiační
 události získané na základě napočítaných havarijních sekvencí,
 reálných údajů a meteorologické situace. Vedle těchto modelů jsou již
 v~době úniku měřeny hodnoty dávkových příkonů ze sítě dozimetrů
-(zařízení k~měření dávek ionizujícího záření) rozmístěných
+(zařízení k~měření dávek ionizujícího záření), které jsou rozmístěné
 po areálu jaderné elektrárny. Všechny tyto informace napomáhají
 krizovému štábu identifikovat směr úniku a vytipovat oblasti
 monitoringu pro \zk{MS}.
@@ -317,7 +317,7 @@ byla simulována havárie v~jaderné elektrárně Dukovany.
 \subsubsection{Bezpečnost práce}
 
 Členové \zk{MS} se účastní měření v~souladu se zásadami bezpečnosti a
-ochrany zdraví, které jsou stanoveny příslušnými zákony a vyhláškami
+ochrany zdraví, které stanovují příslušné zákony a vyhlášky
 (např. zákon č.309/2006 Sb. - zákon o~zajištění dalších podmínek
 bezpečnosti a ochrany zdraví při práci). Pracovníci používají při
 výjezdech osobní ochranné pomůcky (ochranný oděv, pracovní obuv,
