--- a/text/thesiscvut.sty
+++ b/text/thesiscvut.sty
@@ -246,7 +246,6 @@
 \newcommand\oznaceniprohlaseni@cz{Prohl\'{a}\v{s}en\'{\i}}
 %% Text prohlaseni
 \newcommand\prohlasenitext@cz{\par\hspace{2ex}
-\noindent
 Prohla\v{s}uji, \v{z}e %
 \ifTT@semestral
 	semestr\'{a}ln\'{i} projekt
@@ -257,7 +256,7 @@ Prohla\v{s}uji, \v{z}e %
 \ifTT@diploma
   diplomovou pr\'{a}ci
 \fi
-na t\'{e}ma \uv{\nazev@cz} jsem \ vypracoval samostatn\v{e}. Pou\v{z}itou literaturu a~podkladov\'{e} materi\'{a}ly~uv\'{a}d\'{i}m v~seznamu zdroj\r{u}.}
+na t\'{e}ma \uv{\nazev@cz} jsem vypracoval samostatn\v{e}. Pou\v{z}itou literaturu a~podkladov\'{e} materi\'{a}ly uv\'{a}d\'{i}m v~seznamu zdroj\r{u}.}
 
 
 %% Misto prohlaseni
