text: final notes

--- a/text/4-plugin.tex
+++ b/text/4-plugin.tex
@@ -1,3 +1,5 @@
+%%% ML: poznamce pod carou v nazvu kapitoly by bylo dobre se vyhnout
+%%% (ikonku premistit dal do textu a pod)
 \chapter[Zásuvný modul]{Zásuvný
 modul \includegraphics[scale=0.65]{./pictures/ikonka.png}\footnote{Zdroj:
 SÚRO, v.v.i.}}
