--- a/text/5-zaver.tex
+++ b/text/5-zaver.tex
@@ -39,8 +39,8 @@ v~angličtině vytvořen návod na~jeho používání.
 
 \section{Licence a dostupnost zásuvného modulu} Zásuvný modul byl
 vytvořen pod licencí \zk{GNU GPL}, kterou podědil po QGIS knihovnách,
-jež byly k~implementaci využity. Zásuvný modul je volně dostupný z~CTU
-GeoForAll Lab QGIS
+jež byly k~implementaci využity. Zdrojové kódy zásuvného modulu jsou
+volně dostupné z~CTU GeoForAll Lab Git
 %%% ML: tady mate odkaz na online manual
 %%% ML: mluvite o Git anebo QGIS repozitari (zde by mel byt odkaz na git)
 repozitáře\footnote{\texttt{https://github.com/ctu-geoforall-lab-projects/bp-kala-2017}}. V~budoucnu
