--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -55,6 +55,7 @@ kumulativníDávka]} \STATE{\textbf{return} poleAtributů, statistiky}
 
 
 \chapter{User guide} \label{User guide}
+
 This plugin computes the gamma radiation dose of a given route on an
 interpolated map of dose rate values. The secondary product of the
 plugin are basic statistics about the given route. Together, these
@@ -63,6 +64,7 @@ the best and safest for mobile radiation monitoring teams for radiation
 monitoring during nuclear disaster emergency exercises (or~during the
 nuclear disaster itself). It is important to mention, that results of~the~computation, especially
 those, that~are~dealing with~the~gamma radiation dose, are~estimates.
+%%% ML: zacatek vety zni divne (ale to asi detail)
 The reason of this is, that the calculations only use few of~variables,
 that are dealing with this problematics. For example it does not concern
 the~situation on roads, weather (wind, rain..) etc.
@@ -86,6 +88,7 @@ Follow these instructions:
 \item At this time, this plugin is not registered in the official QGIS
 repository, therefore it is required to add its home repository CTU
 GeoForAll Lab for it to be visible in~the~list of plugins. In order to
+%%% ML: zacatek vety zni divne
 this to be done, in \texttt{Settings} tab hit \texttt{Add...} button and
 type \url{http://geo.fsv.cvut.cz/geoforall/qgis-plugins.xml} to~\texttt{URL} 
 slot.
