Final thesis update.

--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -182,7 +182,10 @@
 
 % Vysázení listu zadani
 \stranka{}%
-	{\includegraphics[scale=0.7]{./pictures/zadani.pdf}}%\sffamily\Huge\centering\ }%ZDE VLOŽIT LIST ZADÁNÍ}%
+	{\begin{figure}[H] \centering
+      			\includegraphics[scale=0.7]{./pictures/zadanibaka.png}
+      				
+  			\end{figure}}%\sffamily\Huge\centering\ }%ZDE VLOŽIT LIST ZADÁNÍ}%
 	%{\sffamily\centering Z~důvodu správného číslování stránek}
 
 % Vysázení stránky s abstraktem
