--- a/text/thesiscvut.sty
+++ b/text/thesiscvut.sty
@@ -247,17 +247,17 @@
 %% Text prohlaseni
 \newcommand\prohlasenitext@cz{\par\hspace{2ex}
 \noindent
-Prohla\v{s}uji, \v{z}e %
+Prohla\v{s}uji, \ \v{z}e %
 \ifTT@semestral
 	semestr\'{a}ln\'{i} projekt
 \fi
 \ifTT@bachelor
-  bakal\'{a}\v{r}skou pr\'{a}ci
+  bakal\'{a}\v{r}skou \ pr\'{a}ci \
 \fi
 \ifTT@diploma
   diplomovou pr\'{a}ci
 \fi
-na t\'{e}ma \uv{\nazev@cz} jsem \ vypracoval samostatn\v{e}. Pou\v{z}itou literaturu a~podkladov\'{e} materi\'{a}ly~uv\'{a}d\'{i}m v~seznamu zdroj\r{u}.}
+na \ t\'{e}ma \ \uv{Z\'{a}suvn\'{y} modul QGIS pro pozemn\'{i} monitorov\'{a}n\'{i} radiace} jsem \ vypracoval samostatn\v{e}. Pou\v{z}itou literaturu a~podkladov\'{e} materi\'{a}ly~uv\'{a}d\'{i}m v~seznamu zdroj\r{u}.}
 
 
 %% Misto prohlaseni
