--- a/prezentace/bp-kala-2017.tex
+++ b/prezentace/bp-kala-2017.tex
@@ -18,13 +18,62 @@
 
 \begin{frame}
 \frametitle{Zadání}
-\section{Zadání}
+\section{Úvod}
 \begin{itemize}
 
-\item SÚRO
+\item přímo zadání
 
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\frametitle{Motivace}
+\begin{itemize}
+	\item Proč jsem si to vybral (má to praktický výstup použitelný v praxi) atd., spolupráce se SÚRO (již jeden zásuvný modul předtím, map corners coordinates, s kolegyní Kulovanou)
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\section{Pozemní monitorování radiace}
+\frametitle{Pozemní monitorování radiace}
+%tady ňáký obrázky tras monitorování, mezní hodnoty tadiace
+\begin{itemize}
+\item přeříkat nějak zkráceně, jak se monitoruje, říct o vytipovaných trasách
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\section{Technologie}
+\frametitle{Technologie}
+\begin{itemize}
+	\item QGIS
+	\item Python + PyQt
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\section{Zásuvný modul}
+\frametitle{Zásuvný modul}
+\begin{itemize}
+	 \item Návrh, impementace, testování, Vstup (+ ukázky), výstup (+ ukázky, říct, že výstupy jsou přibližné hodnoty z důvodů zjednoduešení výpočtu, slouží informativně), práce s modulem, vzorkovaní, dokumentace, během implementace probíhalo testování na úřadě, byly zapracovány připomínky
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Vzorkování trasy}
+\end{frame}
+
+\begin{frame}
+\section{Závěr}
+\frametitle{Závěr}
+\begin{itemize}
+	\item Shrnutí (rekapitulace - co vzniklo, co je můj přínos, vznikl tento program, který se může používat takto a takto) Plán do budoucna - rozšíření o vlastní plánování trasy, v čem by se dal modul ještě použít, osobní závěr (poděkování za vstřícnost ústavu, za vedení atd.), co mi to dalo odborně 
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Otázky oponent}
+\end{frame}
 
 \end{document}
