--- a/prezentace/bp-kala-2017.tex
+++ b/prezentace/bp-kala-2017.tex
@@ -6,7 +6,7 @@
 \usepackage{textpos}
 
 \usetheme{Malmoe}
-\title{Zásuvný modul QGIS \\ pro pozemní monitorování radiace}
+\title{Zásuvný modul QGIS \\pro pozemní monitorování radiace}
 \author{Michael Kala}
 \date{29. června 2017}
 
@@ -17,11 +17,18 @@
 \end{frame}
 
 \begin{frame}
-\frametitle{Zadání}
 \section{Úvod}
+\frametitle{Zadání}
+
 \begin{itemize}
 
-\item přímo zadání
+	 
+	%Předmětem této bakalářské práce je implementace softwarového nástroje umožňujícího plánování optimálních tras pozemního monitorování radiace. Při únicích radioaktivních látek do ovzduší je specializovanými softwary spočtena prognóza šíření radioaktivního mraku s využitím dat změřených složkami Radiační monitorovací sítě, zejména sítí včasného zjištění nebo teritoriálními sítěmi. Jedním z produktů je také mapa dávkových příkonů záření gama pro zasaženou oblast. Vytvořený softwarový nástroj určí přibližný odhad dávky záření, kterou obrdží mobilní skupina provádějící měření na dané trase v postiženém území. V případě překročení hraničních hodnot nástroj pomůže přeplánovat trasu přes jiné komunikace příp. změnit rychlost jízdy vozidla tak, aby mobilní skupina nebyla vystavována nebezpečným dávkám. Nástroj byl vytvářen přímo pro Státní ústav radiační ochrany, který se zabývá odbornou činností v oblasti ochrany obyvatelstva před ionizujícím zářením. 
+	\item Softwarový nástroj
+	\item Odhad obdržené dávky gama záření na dané trase
+	\item Státní ústav radiační ochrany, v.v.i.
+	 
+	
 
 \end{itemize}
 \end{frame}
@@ -29,7 +36,10 @@
 \begin{frame}
 \frametitle{Motivace}
 \begin{itemize}
-	\item Proč jsem si to vybral (má to praktický výstup použitelný v praxi) atd., spolupráce se SÚRO (již jeden zásuvný modul předtím, map corners coordinates, s kolegyní Kulovanou)
+	\item Použití v praxi
+	\item Předchozí spolupráce se SÚRO (Map corners coordinates)
+	\item Programování
+	%Proč jsem si to vybral (má to praktický výstup použitelný v praxi) atd., spolupráce se SÚRO (již jeden zásuvný modul předtím, map corners coordinates, s kolegyní Kulovanou)
 \end{itemize}
 \end{frame}
 
@@ -37,9 +47,21 @@
 \begin{frame}
 \section{Pozemní monitorování radiace}
 \frametitle{Pozemní monitorování radiace}
-%tady ňáký obrázky tras monitorování, mezní hodnoty tadiace
 \begin{itemize}
-\item přeříkat nějak zkráceně, jak se monitoruje, říct o vytipovaných trasách
+	\item Dávkový příkon
+	\item Radiační havárie
+		\begin{itemize}
+			\item Časná fáze: Mapování postiženého území
+			\item Střední a pozdní fáze: Sběr vzorků
+		\end{itemize}
+	\item Havarijní připravenost
+		\begin{itemize}
+			\item Připravené trasy
+			\item Cvičení
+			\item Bezpečnost práce
+		\end{itemize}
+
+%přeříkat nějak zkráceně, jak se monitoruje, říct o vytipovaných trasách
 \end{itemize}
 \end{frame}
 
@@ -54,21 +76,45 @@
 
 \begin{frame}
 \section{Zásuvný modul}
-\frametitle{Zásuvný modul}
-\begin{itemize}
-	 \item Návrh, impementace, testování, Vstup (+ ukázky), výstup (+ ukázky, říct, že výstupy jsou přibližné hodnoty z důvodů zjednoduešení výpočtu, slouží informativně), práce s modulem, vzorkovaní, dokumentace, během implementace probíhalo testování na úřadě, byly zapracovány připomínky
-\end{itemize}
+\frametitle{Zásuvný modul: Vstupní data}
+
+	 %Obrázky
+
+	 
+% Návrh, implementace, testování, Vstup (+ ukázky), výstup (+ ukázky, říct, že výstupy jsou přibližné hodnoty z důvodů zjednoduešení výpočtu, slouží informativně), práce s modulem, vzorkovaní, dokumentace, během implementace probíhalo testování na úřadě, byly zapracovány připomínky
 \end{frame}
 
 \begin{frame}
-\frametitle{Vzorkování trasy}
+\frametitle{Zásuvný modul: Výstupní data}
+%obrázky
 \end{frame}
+
+\begin{frame}
+\frametitle{Zásuvný modul: GUI}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Zásuvný modul: Schéma výpočtu}
+%ten obrázek se schématem
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Zásuvný modul: Další informace}
+\begin{itemize}
+	\item Vzorkování trasy
+	\item Dokumentace
+	\item Testování, připomínky
+\end{itemize}
+\end{frame}
+
 
 \begin{frame}
 \section{Závěr}
 \frametitle{Závěr}
 \begin{itemize}
-	\item Shrnutí (rekapitulace - co vzniklo, co je můj přínos, vznikl tento program, který se může používat takto a takto) Plán do budoucna - rozšíření o vlastní plánování trasy, v čem by se dal modul ještě použít, osobní závěr (poděkování za vstřícnost ústavu, za vedení atd.), co mi to dalo odborně 
+	\item %Shrnutí (rekapitulace - co vzniklo, co je můj přínos, vznikl tento program, který se může používat takto a takto) Plán do budoucna - rozšíření o vlastní plánování trasy, v čem by se dal modul ještě použít, osobní závěr (poděkování za vstřícnost ústavu, za vedení atd.), co mi to dalo odborně 
 \end{itemize}
 \end{frame}
 
